# forest-ml

./: .gitignore  README.md  eda.ipynb  mypy.ini  noxfile.py  pyproject.toml
.github/wokflows/: base.yml
.github/workflows/: main.yml
src/forest_ml/: eda.py  features_preparing.py  predict.py  train.py
tests/: sample.csv  sample_test.csv  test_train.py
