[tool.poetry]
name = "forest-ml"
version = "0.1.0"
description = "Model selection and evaluation for Kaggle competition 'Forest Cover Type Prediction' https://www.kaggle.com/competitions/forest-cover-type-prediction"
authors = ["Kasia Pankevich <kasia.bahar@gmail.com>"]

[tool.poetry.scripts]
train = "forest_ml.train:train"
eda = "forest_ml.eda:profile"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "~1.3.5"
pandas-profiling = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
